[package]
name = "numcodecs-sz3"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "SZ3 codec implementation for the numcodecs API"
readme = "README.md"
categories = ["compression", "encoding"]
keywords = ["sz3", "numcodecs", "compression", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true }
numcodecs = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
sz3 = { workspace = true }
thiserror = { workspace = true }
# Explicitly enable the `no_wasm_shim` feature for sz3-sys/zstd-sys
zstd-sys = { workspace = true, features = ["no_wasm_shim"] }

[lints]
workspace = true
