[package]
name = "numcodecs-zfp"
version = "0.3.1"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "ZFP codec implementation for the numcodecs API"
readme = "README.md"
categories = ["compression", "encoding"]
keywords = ["zfp", "numcodecs", "compression", "encoding"]

include = ["/src", "/LICENSE", "/docs/katex.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true }
numcodecs = { workspace = true }
schemars = { workspace = true, features = ["derive", "preserve_order"] }
serde = { workspace = true, features = ["std", "derive"] }
thiserror = { workspace = true }
zfp-sys = { workspace = true, features = ["static", "round-tight-error"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs/katex.html"]
