[package]
name = "numcodecs-python"
version = "0.6.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "pyo3 bindings to the numcodecs API for buffer compression"
readme = "README.md"
categories = ["api-bindings", "compression", "encoding"]
keywords = ["numcodecs", "compression", "encoding", "python", "pyo3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = { workspace = true }
ndarray = { workspace = true }
numcodecs = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
pyo3-error = { workspace = true }
pythonize = { workspace = true }
schemars = { workspace = true, features = ["derive", "preserve_order"] }
serde = { workspace = true }
serde-transcode = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }

[lints]
workspace = true
