[package]
name = "numcodecs-wasm-guest"
version = "0.3.2"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Export numcodecs API compressors from wasm components"
readme = "README.md"
categories = ["wasm", "api-bindings", "compression", "encoding"]
keywords = ["numcodecs", "compression", "encoding", "wasm-component", "wasm-bindgen"]

[dependencies]
numcodecs = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros", "realloc"] }

[features]
registry = ["dep:numcodecs-registry", "dep:serde-transcode"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
format_serde_error = { workspace = true, features = ["serde_json"] }
ndarray = { workspace = true, features = ["std"] }
numcodecs-registry = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde-transcode = { workspace = true, optional = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

[lints]
workspace = true
