[package]
name = "numcodecs-wasm-host-reproducible"
version = "0.2.2+wasi0.2.6"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

description = "Import numcodecs API reproducible compressors from wasm components"
readme = "README.md"
categories = ["wasm", "api-bindings", "compression", "encoding"]
keywords = [
    "numcodecs",
    "compression",
    "encoding",
    "wasm-component",
    "wasm-bindgen",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
numcodecs-wasm-host = { workspace = true }
indexmap = { workspace = true, features = ["std"] }
log = { workspace = true }
numcodecs = { workspace = true }
polonius-the-crab = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wac-graph = { workspace = true }
wasi-sandboxed-component-provider = { workspace = true }
wasm_component_layer = { workspace = true }
wasm_runtime_layer = { workspace = true }
wasmparser = { workspace = true, features = ["features"] }
wasm-encoder = { workspace = true, features = ["wasmparser"] }
wit-component = { workspace = true }
wit-parser = { workspace = true }
vecmap-rs = { workspace = true }

[dev-dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
wasmtime = { workspace = true, features = ["runtime", "cranelift", "cache", "gc-null"] }
wasmtime_runtime_layer = { workspace = true }

[lints]
workspace = true
